# pcb-maker

./: LICENSE  README.md  main.py  pipeline.py  pyproject.toml  venv.bat
.github/: copilot-instructions.md
docs/examples/: cnc-sample-pipeline.yaml  laser-sample-pipeline.yaml
src/: __init__.py  kicad_job.py  main.py  pipeline.py
src/pipeline/: __init__.py  config.py  execution.py
src/pipeline/stages/: __init__.py
test/: hexapod-B_Cu.gbr  test_pipeline.py
test/hexapod/: hexapod-B_Cu.gbr  hexapod-B_Mask.gbr  hexapod-B_Paste.gbr  hexapod-B_Silkscreen.gbr  hexapod-Edge_Cuts.gbr  hexapod-F_Cu.gbr  hexapod-F_Mask.gbr  hexapod-F_Paste.gbr  hexapod-F_Silkscreen.gbr  hexapod-NPTH.drl  hexapod-PTH.drl  hexapod-job.gbrjob
